[Vize][PH] Změny v úvodní stránce

--- a/ui/locale/cs_CZ/LC_MESSAGES/towns.po
+++ b/ui/locale/cs_CZ/LC_MESSAGES/towns.po
@@ -1794,11 +1794,15 @@ msgstr "Předchozí"
 
 msgid "helphtml_about"
 msgstr ""
-"<div align=\"justify\"><span style=\"font-size: 15px\"><div style=\"width:100%[semicolon]background: rgba(30,20,70,0.44)[semicolon]border: 2px solid rgba(40,40,70,0.44)[semicolon]padding: 3px[semicolon]\" >"
+"<div align=\"center\"><span style=\"font-size: 15px\"><div style=\"width:100%[semicolon]background: rgba(30,20,70,0.44)[semicolon]border: 2px solid rgba(40,40,70,0.44)[semicolon]padding: 3px[semicolon]\" >"
 "Vytvářejte si vlastní originální město. Na rozdíl od jiných online strategií si v Towns můžete sami navrhnout rozložení měst, realisticky expandovat po mapě, a dokonce vytvářet <b>vlastní druhy budov!</b> a to od vzhledu až po jejich funkce."
 ""
 "</div></span></div>"
 ""
+"<div align=\"center\"><span style=\"font-size: 15px\"><div style=\"width:100%[semicolon]padding: 3px[semicolon]\" >"
+"<!--buttons-->"
+""
+"</div></span></div>"
 ""
 "<div align=\"justify\"><span style=\"font-size: 15px\"><div style=\"width:100%[semicolon]background: rgba(70,70,30,0.44)[semicolon]border: 2px solid rgba(50,50,50,0.44)[semicolon]padding: 3px[semicolon]\" >"
 "Podívejte se, na čem pracujeme a napište nám názor:<br/><br/>"
