[DelayedBuildings][PH] Stavění budov, Tlačítko postavit okamžitě, Opravy aac, Další opravy time: 3.5

--- a/ui/locale/cs_CZ/LC_MESSAGES/towns.po
+++ b/ui/locale/cs_CZ/LC_MESSAGES/towns.po
@@ -3738,3 +3738,8 @@ msgstr "neznámé&nbsp;město"
 
 msgid "xtype_own"
 msgstr "vaše&nbsp;město"
+
+msgid "finish_immediately"
+msgstr "Dokončit okamžitě [0]"
+
+
