--- a/ui/locale/cs_CZ/LC_MESSAGES/towns.po
+++ b/ui/locale/cs_CZ/LC_MESSAGES/towns.po
@@ -18,7 +18,7 @@ msgstr ""
 msgid "app_title"
 msgstr "Towns &mdash; Strategická kreativní online hra"
 
-# SEO, Meta - title externích aplikací
+# SEO, Meta - title externích aplikací, Ostatní url @todo Přejmenovat
 msgid "apps_title"
 msgstr "[0] | Towns"
 
