[Spawn][PH] Zjednodušení spawnpos

--- a/ui/locale/cs_CZ/LC_MESSAGES/towns.po
+++ b/ui/locale/cs_CZ/LC_MESSAGES/towns.po
@@ -3683,8 +3683,8 @@ msgstr "Odeslat e-maily"
 msgid "admin_page_spawn-register"
 msgstr "Pozice"
 
-msgid "admin_page_spawn-registermap"
-msgstr "Mapa"
+msgid "admin_page_main-registermap"
+msgstr "Mapa pozic"
 
 msgid "admin_page_surkey-addsurkey"
 msgstr "Přidat suroviny"
